@@ -53,7 +53,7 @@ subtest 'do nothing on populate' => sub {
 
 subtest 'update' => sub {
   my $updated = $schema->resultset('Artist')
-      ->upsert({ artistid => 3, name => 'LSD' }, name => \"name || ' ' || excluded.name");
+      ->upsert({ artistid => 3, name => 'LSD' }, { name => \"name || ' ' || excluded.name" });
   is $updated->name,                                'LSG LSD', 'holycrud, our fancy RETURNING werkz';
   is $schema->resultset('Artist')->find(3)->{name}, 'LSG LSD', 'a hash sets';
 
